; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_time_32.c_set_rtc_mmss.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_time_32.c_set_rtc_mmss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtc_device = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"rtc0\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @set_rtc_mmss to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_rtc_mmss(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.rtc_device*, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = call %struct.rtc_device* @rtc_class_open(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store %struct.rtc_device* %5, %struct.rtc_device** %3, align 8
  store i32 -1, i32* %4, align 4
  %6 = load %struct.rtc_device*, %struct.rtc_device** %3, align 8
  %7 = icmp ne %struct.rtc_device* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.rtc_device*, %struct.rtc_device** %3, align 8
  %10 = load i64, i64* %2, align 8
  %11 = call i32 @rtc_set_mmss(%struct.rtc_device* %9, i64 %10)
  store i32 %11, i32* %4, align 4
  %12 = load %struct.rtc_device*, %struct.rtc_device** %3, align 8
  %13 = call i32 @rtc_class_close(%struct.rtc_device* %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %4, align 4
  ret i32 %15
}

declare dso_local %struct.rtc_device* @rtc_class_open(i8*) #1

declare dso_local i32 @rtc_set_mmss(%struct.rtc_device*, i64) #1

declare dso_local i32 @rtc_class_close(%struct.rtc_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
